Small fixes for WebVTTParser. https://bugs.webkit.org/show_bug.cgi?id=71334

Reviewed by Darin Adler.

No new tests.  This is needed to enable other tests, coming soon.

* html/track/WebVTTParser.cpp:
(WebCore::hasLongWebVTTIdentifier): changed to return true when header is
    exactly "WEBVTT"
(WebCore::WebVTTParser::collectTimingsAndSettings): fix typos, position should
    only progress once when checking the character after a timestamp.


Canonical link: https://commits.webkit.org/87632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99039 268f45cc-cd09-0410-ab3c-d52691b4dbfc